--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
   <body>
     <div id="container">
       <div id="profile-picture">
-        <img src="{$profile_pic}" />
+        <img src="/WhatsApp Image 2022-01-19 at 7.47.19 PM.jpeg" />
       </div>
       <div id="introduction">
         <span>
           <div id="hello">Hello, I am</div>
-          <div id="name">{$full_name$}</div>
-          <div id="whoami">A {$studying_year} at IIT Roorkee</div>
+          <div id="name">Sakshi Goyal</div>
+          <div id="whoami">A Sophomore at IIT Roorkee</div>
         </span>
         <span>
           <div id="github-handle">
-            <a href="https://github.com/{$github_username}" target="__blank">@{$github_username}</a>
+            <a href="https://github.com/goyalsakshi2202" target="__blank">@goyalsakshi2202</a>
           </div>
         </span>
       </div>
